update theme with many to many link with users
